2008-10-04 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* ApplicationSettingsBase.cs: honor the IsSynchronized value in the
	indexer.

2008-09-15  Raja R Harinath  <harinath@hurrynot.org>

	* ConfigXmlDocument.cs (Load): Fix build break in 1.1 profile.
	Open code the 'using' with try/finally/Close.

2008-09-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConfigXmlDocument.cs: Dispose XmlTextReader in Load (String).

2008-09-01  Ivan N. Zlatev  <contact@i-nz.net>

	* SettingsPropertyValue.cs: Explicitly use the Invariant culture 
	instead of the current.
	[Fixes bug #374516]

2008-08-05  Ivan N. Zlatev  <contact@i-nz.net>

	* ApplicationSettingsBase.cs: If there is no explicit 
	SettingsSerializeAs attribute to specify the format, distinguish 
	between plain string and XML by checking if the TypeConverter for the 
	property type supports string conversions. If it doesn't then we are 
	present with XML.
	[Fixes bug #414445]

2008-06-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConfigXmlDocument.cs: Implement IConfigErrorInfo on all Node classes.

2008-06-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConfigurationExceptionTest.cs: Removed local bareMessage field, and
	use base.Message instead. Fixed default cor to invoke String ctor of
	SystemException. Fixed Message property to only add filename if not
	null or zero-length string, and only add line if not zero.
	* DictionarySectionHandler.cs: Fixed line endings.
	* IgnoreSectionHandler.cs: Fixed line endings.

2008-03-21  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomizableFileSettingsProvider.cs : fix possible NRE for
	  SettingsContext.Current.

2008-03-21  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomizableFileSettingsProvider.cs : some hash calculation
	  improvements by the author.
2008-03-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomizableFileSettingsProvider.cs : cosmetic header fix
	  requested by the author.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>
